syntax = "proto3";

option go_package = "protobuf_demo/api";
import "google/protobuf/wrappers.proto";
import "google/protobuf/field_mask.proto";
message NoticeReaderRequest{
    string msg = 1;
    oneof notice_way {
        string email = 2;
        string phone = 3;
    }
}

message Book {
    string title =1 ;
    string author =2;
    // 下面这种写法,无法区分默认值和零值
    // int64 price=3;
    google.protobuf.Int64Value price = 3;
    google.protobuf.DoubleValue sale_price = 4; // float64
    google.protobuf.StringValue memo = 5; // string
    optional int64 price_optional = 6;
    message Info {
        string a = 1;
        string  b =2;
    }

    Info info = 7;
}

message UpdateBookRequest {
    // 操作人
    string op = 1;
    // 要更新的书籍信息
    Book book = 2;

    // 要更新的字段
    google.protobuf.FieldMask update_mask = 3;
}